IJI-823: reproducible shared indexes
- PHMap canonicalization
- ValueContainer canonicalization
- stable fileId -> hashId mapping
- stable zip entries order
- fixed value of zipEntry.timestamp
- fixed value of timestamp fields in metadata.json

GitOrigin-RevId: 6789837dd9bdd7b7c7018230913366375597927a